fixed text alignment

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -169,6 +169,7 @@
     z-index: 5;
     position: absolute;
     margin-top: 100px;
+    text-align: center;
 }
 
  .cards.cards11 > ul{
